Miscalleneous GUI fixes.
Wide parse diagrams are no longer truncated on the right hand side
after hiding/showing the <div> using jQuery.

Constituent and Dependency Parse buttons now stay in "active" state
when parse diagrams are shown.

Fixed bug where Dependency Parse button was always disabled, even if
Communication had a valid Dependency Parse.

--- a/quicklime/static/quicklime/quicklime.css
+++ b/quicklime/static/quicklime/quicklime.css
@@ -6,6 +6,12 @@
    other issues), so we override the BRAT defaults here.
    */
 
+div.dagre_parse {
+    clear: both;
+    margin-top: 0.5em;
+    overflow: visible;
+}
+
 .dagre_parse g.type-TOKEN > rect {
     fill: #00ffd0;
 }
